kubeproject/solitaire-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solitaire-deploy
spec:
  selector:
    matchLabels:
      app: solitaire-app
  replicas: 1
  template:
    metadata:
      labels: 
        app: solitaire-app
    spec:
      containers:
      - name: solitaireapp
        image: chimenesjr/solitaire:nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: solitaire-service
spec:
    type: ClusterIP
    ports:
      - targetPort: 80
        port: 32400
