kubeproject/weather-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deploy
spec:
  selector:
    matchLabels:
      app: weather-app
  replicas: 1
  template:
    metadata:
      labels: 
        app: weather-app
    spec:
      volumes:
        - name: nfs-pv
          persistentVolumeClaim:
            claimName: nfs-pvc
      containers:
      - name: weather-app
        image: hakakalmog/myweathercluster
        ports:
        - containerPort: 5000
        volumeMounts:
          - name: nfs-pv
            mountPath: /app/static
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
spec:
  type: ClusterIP
  selector:
    app: weather-app
  ports:
        - targetPort: 5000
          port: 32300
