kubeproject/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingressor
  annotations:
    kubernetes.io/ingress.class: nginx
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
  - host: a6c81f1bdd942417c91520cf9539352d-1126625405.eu-central-1.elb.amazonaws.com
    http:
      paths:
      - path: /weather
        pathType: Prefix
        backend:
          service:
            name: webapp-service
            port:
              number: 5000
      - path: /sol
        pathType: Prefix
        backend:
          service:
            name: solitaire-service
            port:
              number: 80
